// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar wrapper components BeforePrimaryToolbarWrapper should match snapshot – with components 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    class="REDACTED"
    data-testid="before-primary-toolbar-components-plugin"
  >
    <div>
      before
    </div>
  </div>
</div>
`;

exports[`Toolbar wrapper components BeforePrimaryToolbarWrapper should match snapshot – without components 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    class="REDACTED"
    data-testid="before-primary-toolbar-components-plugin"
  />
</div>
`;

exports[`Toolbar wrapper components MainToolbar child wrappers FirstChildWrapper snapshot twoLine=false 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div>
  <div
    class="REDACTED"
  >
    <div>
      child
    </div>
  </div>
</div>
`;

exports[`Toolbar wrapper components MainToolbar child wrappers FirstChildWrapper snapshot twoLine=true 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

@media (max-width: 868px) {
  .emotion-0 {
    -webkit-flex: 1 1 100%;
    -ms-flex: 1 1 100%;
    flex: 1 1 100%;
    height: var(--ak-editor-fullpage-toolbar-height);
    -webkit-box-pack: end;
    -ms-flex-pack: end;
    -webkit-justify-content: flex-end;
    justify-content: flex-end;
    min-width: -webkit-fit-content;
    min-width: -moz-fit-content;
    min-width: fit-content;
  }
}

<div>
  <div
    class="REDACTED"
  >
    <div>
      child
    </div>
  </div>
</div>
`;

exports[`Toolbar wrapper components MainToolbar child wrappers SecondChildWrapper snapshot twoLine=false 1`] = `
.emotion-0 {
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
}

<div>
  <div
    class="REDACTED"
  >
    <div>
      child
    </div>
  </div>
</div>
`;

exports[`Toolbar wrapper components MainToolbar child wrappers SecondChildWrapper snapshot twoLine=true 1`] = `
.emotion-0 {
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
}

@media (max-width: 868px) {
  .emotion-0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    -webkit-flex: 1 1 100%;
    -ms-flex: 1 1 100%;
    flex: 1 1 100%;
    margin: auto;
    height: var(--ak-editor-fullpage-toolbar-height);
    min-width: 0;
  }
}

<div>
  <div
    class="REDACTED"
  >
    <div>
      child
    </div>
  </div>
</div>
`;

exports[`Toolbar wrapper components MainToolbarWrapper should match snapshot without two-line toolbar 1`] = `
.emotion-0 {
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: none;
  border-bottom: var(--ds-border-width, 1px) solid var(--ds-border, #0B120E24);
  -webkit-transition: box-shadow 200ms cubic-bezier(0.15, 1, 0.3, 1);
  transition: box-shadow 200ms cubic-bezier(0.15, 1, 0.3, 1);
  z-index: 510;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: var(--ak-editor-fullpage-toolbar-height);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: var(--ds-surface, #FFFFFF);
}

.emotion-0 object {
  height: 0!important;
}

<div>
  <div
    class="REDACTED"
  >
    <div>
      child
    </div>
  </div>
</div>
`;

exports[`Toolbar wrapper components MainToolbarWrapper should match snapshot – keyline visible 1`] = `
.emotion-0 {
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: none;
  border-bottom: var(--ds-border-width, 1px) solid var(--ds-border, #0B120E24);
  -webkit-transition: box-shadow 200ms cubic-bezier(0.15, 1, 0.3, 1);
  transition: box-shadow 200ms cubic-bezier(0.15, 1, 0.3, 1);
  z-index: 510;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: var(--ak-editor-fullpage-toolbar-height);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: var(--ds-surface, #FFFFFF);
  box-shadow: var(--ds-shadow-overflow, 0px 0px 8px #1E1F2128, 0px 0px 1px #1E1F211e);
}

.emotion-0 object {
  height: 0!important;
}

<div>
  <div
    class="REDACTED"
  >
    <div>
      child
    </div>
  </div>
</div>
`;

exports[`Toolbar wrapper components MainToolbarWrapper should match snapshot – two-line toolbar 1`] = `
.emotion-0 {
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: none;
  border-bottom: var(--ds-border-width, 1px) solid var(--ds-border, #0B120E24);
  -webkit-transition: box-shadow 200ms cubic-bezier(0.15, 1, 0.3, 1);
  transition: box-shadow 200ms cubic-bezier(0.15, 1, 0.3, 1);
  z-index: 510;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: var(--ak-editor-fullpage-toolbar-height);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: var(--ds-surface, #FFFFFF);
}

.emotion-0 object {
  height: 0!important;
}

@media (max-width: 868px) {
  .emotion-0 {
    -webkit-box-flex-wrap: wrap;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    height: calc(var(--ak-editor-fullpage-toolbar-height) * 2);
  }
}

<div>
  <div
    class="REDACTED"
  >
    <div>
      child
    </div>
  </div>
</div>
`;
